--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,7 +127,7 @@
     <string name="price_for_basic_hint">가격(필수)</string>
     <string name="item_name_hint">상품명을 입력해 주세요.</string>
     <string name="price_hint">가격을 입력해 주세요.</string>
-    <string name="shop_link_guide">복사한 링크로 아이템 정보를 불러올 수 있어요!</string>
+    <string name="shop_link_guide">복사한 링크로 아이템을 불러올 수 있어요!</string>
     <string name="memo_short_hint">메모를 입력해 보세요.</string>
     <string name="memo_hint">브랜드, 사이즈, 컬러 등 아이템 정보를 메모로 남겨보세요!😉</string>
     <string name="wish_basic_invalid_shop_link_detail">쇼핑몰 링크를 다시 확인해 주세요.</string>
